# resume_to_webpage

./: .gitignore
.devcontainer/: devcontainer.json
res_to_webpage/: pyproject.toml  requirements.txt
res_to_webpage/res_to_webpage/: app.py
res_to_webpage/res_to_webpage/pages/: resume_page.py
