[project]
name = "res-to-webpage"
version = "0.1.0"
description = ""
authors = [
    {name = "akash thota",email = "thotaakash2710@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.65.2,<2.0.0)",
    "streamlit (>=1.42.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
